# nginx-rtmp-module

./: .gitignore  settings.gradle
lib/: build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: ngx_config.h
nginx-rtmp/: CMakeLists.txt  build.gradle
nginx-rtmp/src/nginx/cpp/auto/: ngx_auto_config.h  ngx_auto_headers.h  ngx_modules.c
